- ExecJavaMojoTest#testIncorrectMainMethodSignature changed into an   integration test. The test was not realiable caused by accessing   maven central directly instead via the repo manager.   This is caused by using the AbstractMojoTest which seemed   to be having no support of using the users settings.xml.   The result is that this tests will not not succeed   allways. The test has been converted into three   integration tests:   src/it/mexec-29, src/it-mexec-29-non-static and   src/it/mexec-29-wrong-signature.   These tests check the different situations which   can occur.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@19260 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,37 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.codehaus.gmaven</groupId>
+            <artifactId>gmaven-plugin</artifactId>
+            <version>1.5</version>
+            <dependencies>
+              <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy</artifactId>
+                <version>1.8.4</version>
+              </dependency>
+              <dependency>
+                <groupId>org.codehaus.gmaven.runtime</groupId>
+                <artifactId>gmaven-runtime-1.8</artifactId>
+                <version>1.4</version>
+              </dependency>
+            </dependencies>
+            <configuration>
+              <debug>false</debug>
+              <verbose>true</verbose>
+              <stacktrace>true</stacktrace>
+              <defaultScriptExtension>.groovy</defaultScriptExtension>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-invoker-plugin</artifactId>
             <version>1.8</version>
@@ -222,7 +253,8 @@
                 </goals>
                 <configuration>
                   <extraArtifacts>
-                    <extraArtifact>org.codehaus.plexus:plexus-utils:1.1:jar</extraArtifact>
+                    <extraArtifact>commons-io:commons-io:1.1:jar</extraArtifact>
+                    <extraArtifact>commons-logging:commons-logging:1.0.4:jar</extraArtifact>
                   </extraArtifacts>
                 </configuration>
               </execution>
