--- a/src/it/mexec-29/pom.xml
+++ b/src/it/mexec-29/pom.xml
@@ -1,18 +1,18 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.codehaus.mojo.exec.it</groupId>
+    <artifactId>parent</artifactId>
+    <version>0.1</version>
+  </parent>
+
   <groupId>org.cb.maven.plugins.exec</groupId>
   <artifactId>project1</artifactId>
   <version>0.1</version>
   <packaging>jar</packaging>
   <name>Maven Exec Plugin</name>
   <inceptionYear>2005</inceptionYear>
-  <licenses>
-    <license>
-      <name>Apache License 2</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
 
   <developers>
     <developer>
@@ -32,21 +32,19 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.1</version>
     </dependency>      
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
     </dependency>      
   </dependencies>
 
   <build>
-    <!-- for manual tests. Can't be automated in the unit tests as the plugin's not installed. What about integration tests? -->
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
+        <version>@pom.version@</version>
         <executions>
            <execution>
               <phase>test</phase>
@@ -60,13 +58,6 @@
         </configuration>
       </plugin>
     </plugins>
-    <!--extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-ssh-external</artifactId>
-        <version>1.0-alpha-5-SNAPSHOT</version>
-      </extension>
-    </extensions-->
   </build>
 
 </project>
