--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,9 @@
               <pomIncludes>
                 <pomInclude>*/pom.xml</pomInclude>
               </pomIncludes>
+              <pomExcludes>
+                <pomExclude>mexec-86/pom.xml</pomExclude> <!-- unstable -->
+              </pomExcludes>
               <preBuildHookScript>setup</preBuildHookScript>
               <postBuildHookScript>verify</postBuildHookScript>
               <settingsFile>src/it/settings.xml</settingsFile>
