- Added myself as developer.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@19347 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
       <email>rfscholte@codehaus.org</email>
       <timezone>Europe/Amsterdam</timezone>
     </developer>
+    <developer>
+      <id>khmarbaise</id>
+      <name>Karl Heinz Marbaise</name>
+      <email>khmarbaise@codehaus.org</email>
+      <timezone>Europe/Berlin</timezone>
+    </developer>
   </developers>
 
   <contributors>
