Add skipErrorNoDescriptorsFound, so this plugin can be built with M2.2.1 as well
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@19361 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,7 @@
         <artifactId>maven-plugin-plugin</artifactId>
         <configuration>
           <goalPrefix>exec</goalPrefix>
+          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
         <executions>
           <execution>
