[MEXEC-126]   - Integration test mexec-79     - Added a fix for Maven 2.0.11 cause it seemed to be not enough to       define directory in the pom file. After adding a supplemental line       outputDirectory with the appropriate folder it works.       So this looks like a problem in Maven 2.0.11 itself.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@19375 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/mexec-79/pom.xml
+++ b/src/it/mexec-79/pom.xml
@@ -15,6 +15,8 @@
 
   <build>
     <directory>target or build</directory>
+    <!-- The following entry is need to satisfy Maven 2.0.11, cause it does not work with only the previous line -->
+    <outputDirectory>target or build/classes</outputDirectory>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
