--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
       <version>3.2</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
