--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
+    <!-- TODO: Update to 33 before release: 1.4 -->
     <version>30</version>
   </parent>
 
@@ -153,10 +154,14 @@
       <scope>provided</scope>
     </dependency>
 
+    <!--
+      Needed to be updated after commons-exec 1.3 has been released.
+      Details see: https://issues.apache.org/jira/browse/EXEC-80.
+     -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-exec</artifactId>
-      <version>1.1</version>
+      <version>1.2</version>
     </dependency>
 
     <dependency>
