--- a/pom.xml
+++ b/pom.xml
@@ -335,5 +335,36 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <!-- mvn -Pgithub site will deploy the site to github site. -->
+      <id>github</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.9</version>
+            <configuration>
+              <message>Creating site for ${project.version}</message>
+              <server>github</server>
+              <override>true</override>
+              <includeAttached>true</includeAttached>
+              <server>github</server>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>site</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
