--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -145,10 +146,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!--
-      Needed to be updated after commons-exec 1.3 has been released.
-      Details see: https://issues.apache.org/jira/browse/EXEC-80.
-     -->
+    <!-- Needed to be updated after commons-exec 1.3 has been released. Details see: https://issues.apache.org/jira/browse/EXEC-80. -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-exec</artifactId>
@@ -212,22 +210,16 @@
         </configuration>
         <executions>
           <execution>
-            <id>default-descriptor</id>
+            <id>mojo-descriptor</id>
             <goals>
               <goal>descriptor</goal>
             </goals>
           </execution>
-          <execution>
-            <id>help-mojo</id>
-            <goals>
-              <goal>helpmojo</goal>
-            </goals>
-          </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
+
   <profiles>
     <profile>
       <id>run-its</id>
@@ -283,8 +275,8 @@
               <preBuildHookScript>setup</preBuildHookScript>
               <postBuildHookScript>verify</postBuildHookScript>
               <settingsFile>src/it/settings.xml</settingsFile>
-              <!-- Currently working with more than one thread does not work, cause it is not guaranteed that the setup-config project
-                is build at first. see also http://jira.codehaus.org/browse/MINVOKER-147 -->
+              <!-- Currently working with more than one thread does not work, cause it is not guaranteed that the setup-config
+                project is build at first. see also http://jira.codehaus.org/browse/MINVOKER-147 -->
               <parallelThreads>1</parallelThreads>
             </configuration>
             <executions>
