Fixed my email address to apache.org

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <developer>
       <id>khmarbaise</id>
       <name>Karl Heinz Marbaise</name>
-      <email>khmarbaise@codehaus.org</email>
+      <email>khmarbaise@apache.org</email>
       <timezone>Europe/Berlin</timezone>
     </developer>
   </developers>
