--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
-    <version>36</version>
+    <version>38</version>
   </parent>
 
   <artifactId>exec-maven-plugin</artifactId>
@@ -90,8 +90,8 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:git@github.com:mojohaus/exec-maven-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:mojohaus/exec-maven-plugin.git</developerConnection>
+    <connection>scm:git:https://github.com/mojohaus/exec-maven-plugin.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/mojohaus/exec-maven-plugin.git</developerConnection>
     <url>https://github.com/mojohaus/exec-maven-plugin</url>
   </scm>
 
