--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
 
   <properties>
     <mavenVersion>2.2.1</mavenVersion>
+    <mojo.java.target>1.5</mojo.java.target>
   </properties>
 
   <build>
