Avoid travis-ci gmaven-plugin provisioning error during integration test

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ branches:
 notifications:
     email:
         - khmarbaise@apache.org
+after_failure: "cat /home/travis/build/demonfiddler/exec-maven-plugin/target/it/async/build.log"
