--- a/src/it/async/pom.xml
+++ b/src/it/async/pom.xml
@@ -21,39 +21,33 @@
         <version>@pom.version@</version>
         <executions>
           <execution>
+            <id>async-it</id>
             <phase>test</phase>
             <goals>
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>main</executable>
+              <executable>async-it</executable>
               <workingDirectory>src/main/scripts</workingDirectory>
               <async>true</async>
               <!-- NOTE: there is no easy way to test asyncDestroyOnShutdown, as both cases require guaranteed IT ordering. -->
               <!--asyncDestroyOnSutdown>true</asyncDestroyOnSutdown-->
             </configuration>
           </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.gmaven</groupId>
-        <artifactId>gmaven-plugin</artifactId>
-        <version>1.5</version>
-        <executions>
+          <!-- Wait for just long enough for the above async-it script to start up and emit its verify message. -->
           <execution>
+            <id>post-async-it</id>
             <phase>test</phase>
             <goals>
-              <goal>execute</goal>
+              <goal>exec</goal>
             </goals>
             <configuration>
-              <source>
-                // Allow time for async script to start and emit test string.
-                Thread.sleep(1000)
-              </source>
+              <executable>post-async-it</executable>
+              <workingDirectory>src/main/scripts</workingDirectory>
             </configuration>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
-</project>
+ </project>
