Make *nix test scripts executable, replacing CRLF with LF.

--- a/src/it/async/pom.xml
+++ b/src/it/async/pom.xml
@@ -27,8 +27,8 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>async-it</executable>
-              <workingDirectory>src/main/scripts</workingDirectory>
+              <executable>src/main/scripts/async-it</executable>
+              <!--workingDirectory>src/main/scripts</workingDirectory-->
               <async>true</async>
               <!-- NOTE: there is no easy way to test asyncDestroyOnShutdown, as both cases require guaranteed IT ordering. -->
               <!--asyncDestroyOnSutdown>true</asyncDestroyOnSutdown-->
@@ -42,8 +42,8 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>post-async-it</executable>
-              <workingDirectory>src/main/scripts</workingDirectory>
+              <executable>src/main/scripts/post-async-it</executable>
+              <!--workingDirectory>src/main/scripts</workingDirectory-->
             </configuration>
           </execution>
         </executions>
