java doesn't have to be on the Path, however JAVA_HOME is always set. This also ensures that the Java runtime version for Maven is also used for the ITs.

--- a/src/it/envscript/pom.xml
+++ b/src/it/envscript/pom.xml
@@ -31,7 +31,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>java</executable>
+              <executable>${JAVA_HOME}/bin/java</executable>
               <arguments>
                 <argument>-version</argument>
               </arguments>
@@ -45,7 +45,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>java</executable>
+              <executable>${JAVA_HOME}/bin/java</executable>
               <arguments>
                 <argument>-version</argument>
               </arguments>
