--- a/src/it/mexec-104/pom.xml
+++ b/src/it/mexec-104/pom.xml
@@ -28,7 +28,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>java</executable>
+              <executable>${JAVA_HOME}/bin/java</executable>
               <arguments>
                 <argument>-cp</argument>
                 <argument>target/classes</argument>
