--- a/src/it/mexec-86/pom.xml
+++ b/src/it/mexec-86/pom.xml
@@ -26,7 +26,7 @@
             </goals>
             <configuration>
               <outputFile>${project.build.directory}/out.log</outputFile>
-              <executable>java</executable>
+              <executable>${JAVA_HOME}/bin/java</executable>
               <arguments>
                 <argument>-cp</argument>
                 <argument>target/classes</argument>
