--- a/src/it/mexec-66/pom.xml
+++ b/src/it/mexec-66/pom.xml
@@ -61,7 +61,7 @@
           </execution>
         </executions>
         <configuration>
-          <executable>java</executable>
+          <executable>${JAVA_HOME}/bin/java</executable>
         </configuration>
       </plugin>
     </plugins>
