--- a/src/it/mexec-70/pom.xml
+++ b/src/it/mexec-70/pom.xml
@@ -25,7 +25,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>java</executable>
+              <executable>${JAVA_HOME}/bin/java</executable>
               <arguments>
                 <argument>-classpath</argument>
                 <classpath />
