--- a/src/it/mexec-88/pom.xml
+++ b/src/it/mexec-88/pom.xml
@@ -27,7 +27,7 @@
           </execution>
         </executions>
         <configuration>
-          <executable>java</executable>
+          <executable>${JAVA_HOME}/bin/java</executable>
           <arguments>
             <argument>-classpath</argument>
             <classpath />
