Changed the cache configuration to use the default cache location.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,8 +19,8 @@ install:
   - cmd: mvn --version
   - cmd: java -version
 build_script:
-  - mvn -Dmaven.repo.local=C:\maven -B -Prun-its clean verify
+  - mvn -B -Prun-its clean verify
 #test_script:
 #- mvn -Prun-its verify -B
 cache:
-- C:\maven
+  - C:\Users\appveyor\.m2
