--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
     <developer>
       <id>rfscholte</id>
       <name>Robert Scholte</name>
-      <email>rfscholte@codehaus.org</email>
+      <email>rfscholte@apache.org</email>
       <timezone>Europe/Amsterdam</timezone>
     </developer>
     <developer>
@@ -110,7 +110,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-toolchain</artifactId>
-      <version>1.0</version>
+      <version>${mavenVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -230,7 +230,7 @@
       <plugin>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-component-metadata</artifactId>
-        <version>1.6</version>
+        <version>1.7</version>
         <executions>
           <execution>
             <goals>
