--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
       <artifactId>commons-exec</artifactId>
       <version>1.3</version>
     </dependency>
+    <dependency>
+	  <groupId>org.apache.maven.shared</groupId>
+	  <artifactId>maven-common-artifact-filters</artifactId>
+	  <version>3.0.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
