--- a/src/it/jigsaw/pom.xml
+++ b/src/it/jigsaw/pom.xml
@@ -17,7 +17,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6-jigsaw-SNAPSHOT</version>
+        <version>3.6.1</version>
         <configuration>
           <source>9</source>
           <target>9</target>
@@ -28,7 +28,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>@project.version@</version>
         <configuration>
-          <executable>D:\jdk-9\bin\java.exe</executable>
+          <executable>${JAVA_HOME}/bin/java</executable>
           <arguments>
             <argument>-p</argument>
             <modulepath/>
