Switch to methodHandles

--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,9 @@
             <artifactId>java17</artifactId>
             <version>1.0</version>
           </signature>
+          <ignores>
+            <ignore>java.lang.invoke.MethodHandle</ignore>
+          </ignores>
         </configuration>
       </plugin>
       <plugin>
