--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: java
 jdk:
-  - oraclejdk7
-  - oraclejdk8
+  - openjdk7
+  - openjdk8
+  - openjdk9
+  - openjdk10
+  - openjdk11
+  - openjdk-ea
+  
+dist: trusty
+
 script: "mvn --show-version --errors --batch-mode -Prun-its clean verify"
+
 cache:
     directories:
     - $HOME/.m2
