--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
 jdk:
-  - oraclejdk7
-  - oraclejdk8
+  - openjdk7
+  - openjdk8
+  
+dist: trusty
+
 script: "mvn --show-version --errors --batch-mode -Prun-its clean verify"
 cache:
     directories:
