--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,6 @@ clone_depth: 10
 environment:
   matrix:
     - JAVA_HOME: C:\Program Files\Java\jdk1.7.0
-      https.protocols: TLSv1.2
     - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
 
 install:
@@ -19,7 +18,16 @@ install:
   - cmd: SET MAVEN_OPTS=-Xmx768m
   - cmd: mvn --version
   - cmd: java -version
+  
+for:
+  -
+    matrix:
+      only:
+        JAVA_HOME: C:\Program Files\Java\jdk1.7.0
+    build_script:
+      - mvn -B -Prun-its clean verify -Dhttps.protocols=TLSv1.2
+		
 build_script:
-  - mvn -B -Prun-its clean verify
+  - mvn -B -Prun-its clean verify 
 cache:
   - C:\Users\appveyor\.m2
