--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ for:
   -
     matrix:
       only:
-        JAVA_HOME: C:\Program Files\Java\jdk1.7.0
+        - JAVA_HOME: C:\Program Files\Java\jdk1.7.0
     build_script:
       - mvn -B -Prun-its clean verify -Dhttps.protocols=TLSv1.2
 
